--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1160,14 +1160,9 @@
    (set_attr "mode" "SI")
    (set_attr "length_immediate" "1")])
 
-; The first alternative is used only to compute proper length of instruction.
-; Reload's algorithm does not take into account the cost of spill instructions
-; needed to free register in given class, so avoid it from choosing the first
-; alternative when eax is not available.
-
 (define_insn "*movsi_1"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=*?a,r,*?a,m,!*y,!rm,!*y,!*Y,!rm,!*Y")
-	(match_operand:SI 1 "general_operand" "im,rinm,rinm,rin,*y,*y,rm,*Y,*Y,rm"))]
+  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,m,!*y,!rm,!*y,!*Y,!rm,!*Y")
+	(match_operand:SI 1 "general_operand" "rinm,rin,*y,*y,rm,*Y,*Y,rm"))]
   "(TARGET_INTER_UNIT_MOVES || optimize_size)
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
 {
@@ -1193,21 +1188,20 @@
     }
 }
   [(set (attr "type")
-     (cond [(eq_attr "alternative" "4,5,6")
+     (cond [(eq_attr "alternative" "2,3,4")
 	      (const_string "mmxmov")
-	    (eq_attr "alternative" "7,8,9")
+	    (eq_attr "alternative" "5,6,7")
 	      (const_string "ssemov")
 	    (and (ne (symbol_ref "flag_pic") (const_int 0))
 		 (match_operand:SI 1 "symbolic_operand" ""))
 	      (const_string "lea")
 	   ]
 	   (const_string "imov")))
-   (set_attr "modrm" "0,*,0,*,*,*,*,*,*,*")
-   (set_attr "mode" "SI,SI,SI,SI,DI,SI,SI,TI,SI,SI")])
+   (set_attr "mode" "SI,SI,DI,SI,SI,TI,SI,SI")])
 
 (define_insn "*movsi_1_nointernunit"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=*?a,r,*?a,m,!*y,!m,!*y,!*Y,!m,!*Y")
-	(match_operand:SI 1 "general_operand" "im,rinm,rinm,rin,*y,*y,m,*Y,*Y,m"))]
+  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,m,!*y,!m,!*y,!*Y,!m,!*Y")
+	(match_operand:SI 1 "general_operand" "rinm,rin,*y,*y,m,*Y,*Y,m"))]
   "(!TARGET_INTER_UNIT_MOVES && !optimize_size)
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
 {
@@ -1233,17 +1227,16 @@
     }
 }
   [(set (attr "type")
-     (cond [(eq_attr "alternative" "4,5,6")
+     (cond [(eq_attr "alternative" "2,3,4")
 	      (const_string "mmxmov")
-	    (eq_attr "alternative" "7,8,9")
+	    (eq_attr "alternative" "5,6,7")
 	      (const_string "ssemov")
 	    (and (ne (symbol_ref "flag_pic") (const_int 0))
 		 (match_operand:SI 1 "symbolic_operand" ""))
 	      (const_string "lea")
 	   ]
 	   (const_string "imov")))
-   (set_attr "modrm" "0,*,0,*,*,*,*,*,*,*")
-   (set_attr "mode" "SI,SI,SI,SI,DI,SI,SI,TI,SI,SI")])
+   (set_attr "mode" "SI,SI,DI,SI,SI,TI,SI,SI")])
 
 ;; Stores and loads of ax to arbitrary constant address.
 ;; We fake an second form of instruction to force reload to load address
@@ -1311,14 +1304,9 @@
   [(set_attr "type" "push")
    (set_attr "mode" "QI")])
 
-; The first alternative is used only to compute proper length of instruction.
-; Reload's algorithm does not take into account the cost of spill instructions
-; needed to free register in given class, so avoid it from choosing the first
-; alternative when eax is not available.
-
 (define_insn "*movhi_1"
-  [(set (match_operand:HI 0 "nonimmediate_operand" "=*?a,r,r,*?a,r,m")
-	(match_operand:HI 1 "general_operand" "i,r,rn,rm,rm,rn"))]
+  [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,r,m")
+	(match_operand:HI 1 "general_operand" "r,rn,rm,rn"))]
   "GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM"
 {
   switch (get_attr_type (insn))
@@ -1335,36 +1323,35 @@
     }
 }
   [(set (attr "type")
-     (cond [(and (eq_attr "alternative" "0,1")
+     (cond [(and (eq_attr "alternative" "0")
 		 (ior (eq (symbol_ref "TARGET_PARTIAL_REG_STALL")
 			  (const_int 0))
 		      (eq (symbol_ref "TARGET_HIMODE_MATH")
 			  (const_int 0))))
 	      (const_string "imov")
-	    (and (eq_attr "alternative" "2,3,4")
+	    (and (eq_attr "alternative" "1,2")
 		 (match_operand:HI 1 "aligned_operand" ""))
 	      (const_string "imov")
 	    (and (ne (symbol_ref "TARGET_MOVX")
 		     (const_int 0))
-		 (eq_attr "alternative" "0,1,3,4"))
+		 (eq_attr "alternative" "0,2"))
 	      (const_string "imovx")
 	   ]
 	   (const_string "imov")))
     (set (attr "mode")
       (cond [(eq_attr "type" "imovx")
 	       (const_string "SI")
-	     (and (eq_attr "alternative" "2,3,4")
+	     (and (eq_attr "alternative" "1,2")
 		  (match_operand:HI 1 "aligned_operand" ""))
 	       (const_string "SI")
-	     (and (eq_attr "alternative" "0,1")
+	     (and (eq_attr "alternative" "0")
 		  (ior (eq (symbol_ref "TARGET_PARTIAL_REG_STALL")
 			   (const_int 0))
 		       (eq (symbol_ref "TARGET_HIMODE_MATH")
 			   (const_int 0))))
 	       (const_string "SI")
 	    ]
-	    (const_string "HI")))
-   (set_attr "modrm" "0,*,*,0,*,*")])
+	    (const_string "HI")))])
 
 ;; Stores and loads of ax to arbitrary constant address.
 ;; We fake an second form of instruction to force reload to load address
@@ -1580,7 +1567,7 @@
 (define_expand "movstrictqi"
   [(set (strict_low_part (match_operand:QI 0 "nonimmediate_operand" ""))
 	(match_operand:QI 1 "general_operand" ""))]
-  "! TARGET_PARTIAL_REG_STALL"
+  "! TARGET_PARTIAL_REG_STALL || optimize_size"
 {
   /* Don't generate memory->memory moves, go through a register.  */
   if (GET_CODE (operands[0]) == MEM && GET_CODE (operands[1]) == MEM)
@@ -1590,7 +1577,7 @@
 (define_insn "*movstrictqi_1"
   [(set (strict_low_part (match_operand:QI 0 "nonimmediate_operand" "+qm,q"))
 	(match_operand:QI 1 "general_operand" "*qn,m"))]
-  "! TARGET_PARTIAL_REG_STALL
+  "(! TARGET_PARTIAL_REG_STALL || optimize_size)
    && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
   "mov{b}\t{%1, %0|%0, %1}"
   [(set_attr "type" "imov")
@@ -13502,9 +13489,9 @@
    (set_attr "modrm" "0")
    (set (attr "length")
 	   (if_then_else (and (ge (minus (match_dup 0) (pc))
-				  (const_int -128))
+				  (const_int -126))
 			      (lt (minus (match_dup 0) (pc))
-				  (const_int 124)))
+				  (const_int 128)))
 	     (const_int 2)
 	     (const_int 6)))])
 
@@ -13520,9 +13507,9 @@
    (set_attr "modrm" "0")
    (set (attr "length")
 	   (if_then_else (and (ge (minus (match_dup 0) (pc))
-				  (const_int -128))
+				  (const_int -126))
 			      (lt (minus (match_dup 0) (pc))
-				  (const_int 124)))
+				  (const_int 128)))
 	     (const_int 2)
 	     (const_int 6)))])
 
@@ -13787,9 +13774,9 @@
   [(set_attr "type" "ibr")
    (set (attr "length")
 	   (if_then_else (and (ge (minus (match_dup 0) (pc))
-				  (const_int -128))
+				  (const_int -126))
 			      (lt (minus (match_dup 0) (pc))
-				  (const_int 124)))
+				  (const_int 128)))
 	     (const_int 2)
 	     (const_int 5)))
    (set_attr "modrm" "0")])
@@ -13913,9 +13900,9 @@
    (set (attr "length")
 	(if_then_else (and (eq_attr "alternative" "0")
 			   (and (ge (minus (match_dup 0) (pc))
-			            (const_int -128))
+			            (const_int -126))
 			        (lt (minus (match_dup 0) (pc))
-			            (const_int 124))))
+			            (const_int 128))))
 		      (const_int 2)
 		      (const_int 16)))
    ;; We don't know the type before shorten branches.  Optimistically expect
@@ -14350,7 +14337,7 @@
 
 (define_expand "ffssi2"
   [(set (match_operand:SI 0 "nonimmediate_operand" "") 
-	(ffs:SI (match_operand:SI 1 "general_operand" "")))]
+	(ffs:SI (match_operand:SI 1 "nonimmediate_operand" "")))]
   ""
 {
   rtx out = gen_reg_rtx (SImode), tmp = gen_reg_rtx (SImode);
