--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,71 @@
+2003-03-18  Roger Sayle  <roger@eyesopen.com>
+
+	PR c++/10031
+	* decl.c (duplicate_decls): Use the new type when prototyping
+	anticipated decls, even when the types match.  This defines the
+	exception list for the built-in function.
+
+2003-03-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/10091
+	* typeck.c (build_class_member_access_expr): Compare 
+	TYPE_MAIN_VARIANTs.
+
+	* decl.c (finish_function): Don't skip a block.
+
+	PR c++/9993
+	* decl.c (finish_function): Only allow the NRVO to use variables
+	declared at function scope.
+
+2003-03-17  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/9629
+	* cp-tree.h (struct language_function): Add in_base_initializer.
+	(in_base_initializer): define it.
+	(expand_member_init): Remove INIT param.
+	* init.c (expand_member_init): Remove INIT param, return the member.
+	(emit_mem_initializers): Set in_base_initializer.
+	* class.c (build_base_path): Check in_base_initializer.
+	* parse.y (begin_member_init): New reduction.
+	(member_init): Use it.
+	* pt.c (tsubst_initializer_list): Set in_base_initializer.
+
+2003-03-15  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/6440
+	* pt.c (maybe_process_partial_specialization): Handle
+	member class template when enclosing class template is
+	explicit specialized.
+	(most_general_template): Stop looking when DECL is already
+	specialized.
+
+2003-03-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/9420
+	* search.c (lookup_conversions): Call complete_type here.
+	* call.c (implicit_conversion): Not here.
+
+2003-03-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/9336
+	* decl2.c (lookup_arg_dependent): Handle error_mark_node.
+
+2003-03-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* decl2.c (do_nonmember_using_decl): Correct handling of
+	simultaneous type/non-type bindings.
+
+2003-03-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* call.c (initialize_reference): Remove bogus assertion.
+	* decl.c (build_ptrmemfunc_type): Revert change of 2003-03-09.
+
+2003-03-12  Andrew Lewycky  <andrew@mxc.ca>
+
+	PR c++/7050
+	* expr.c (cxx_expand_expr): Return const0_rtx for throw
+	expressions.
+
 2003-03-11  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/9474
@@ -32,6 +100,9 @@
 	* g++spec.c (lang_specific_driver): Use DEFAULT_WORD_SWITCH_TAKES_ARG.
 	
 2003-03-10  Jason Merrill  <jason@redhat.com>
+
+	PR c++/9798
+	* decl.c (push_using_directive): Push before recursing.
 
 	PR c++/9868
 	* call.c (resolve_scoped_fn_name): Handle the case of a function
