RH Issue Tracker #14363         * cpplib.h (struct cpp_options): Add warn_deprecated field.         * cppinit.c (cpp_create_reader): Turn it on by default.         * cpplib.c (do_pragma_once): Only complain about #pragma once         if warn_deprecated is set.         * cp/decl2.c (cxx_decode_option): Set cpp_opts->warn_deprecated         based on -Wdeprecated.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@64591 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-03-19  Jason Merrill  <jason@redhat.com>
+
+	RH Issue Tracker #14363
+	* cpplib.h (struct cpp_options): Add warn_deprecated field.
+	* cppinit.c (cpp_create_reader): Turn it on by default.
+	* cpplib.c (do_pragma_once): Only complain about #pragma once
+	if warn_deprecated is set.
+
 2003-03-12  Richard Henderson  <rth@redhat.com>
 
         PR opt/8178
