2003-03-19  Alan Modra  <amodra@bigpond.net.au>
	PR target/10073
	* gcc.c-torture/compile/20030319-1.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@64624 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-03-19  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/10073
+	* gcc.c-torture/compile/20030319-1.c: New.
+
 2003-03-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/decl-3.c: New test.
