--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-24  Jakub Jelinek  <jakub@redhat.com>
+
+	* expr.c (do_jump): Handle UNSAVE_EXPR specially.
+
 2003-03-19  Jason Merrill  <jason@redhat.com>
 
 	RH Issue Tracker #14363
