--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -122,6 +122,7 @@
    (UNSPECV_STMXCSR		40)
    (UNSPECV_FEMMS		46)
    (UNSPECV_CLFLUSH		57)
+   (UNSPECV_ALIGN		66)
   ])
 
 ;; Insns whose names begin with "x86_" are emitted by gen_FOO calls
@@ -14240,6 +14241,19 @@
    (set_attr "length_immediate" "0")
    (set_attr "modrm" "0")
    (set_attr "ppro_uops" "one")])
+
+;; UNSPEC_VOLATILE is considered to use and clobber all hard registers and
+;; all of memory.  This blocks insns from being moved across this point.
+
+(define_insn "align"
+  [(unspec_volatile [(match_operand 0 "" "")] UNSPECV_ALIGN)]
+  ""
+{
+#ifdef HAVE_GAS_MAX_SKIP_P2ALIGN
+  return ".p2align\t4,,%c0";
+#endif
+}
+  [(set_attr "length" "16")])
 
 (define_insn "init_pipe"
   [(const_int 1)]
