--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,102 @@
+2003-03-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/9414
+	* config/sparc/sparc.md (widening peepholes): Use
+	widen_memory_access instead of change_address.
+
+2003-03-23  Daniel Jacobowitz  <drow@mvista.com>
+
+	Fix PR target/9797.
+	* stmt.c (expand_decl_init): Call push_temp_slots () and
+	pop_temp_slots ().
+
+2003-03-23  Richard Henderson  <rth@redhat.com>
+     
+        * cfgcleanup.c (try_optimize_cfg): Allow merging of tablejumps
+        before flow2.
+        * cfgrtl.c (try_redirect_by_replacing_jump): Similarly.
+
+2003-03-23  Richard Henderson  <rth@redhat.com>
+
+        PR opt/10116
+        * ifcvt.c (find_if_block): Disallow tablejump insns outgoing
+        from then_bb or else_bb after flow2.
+
+2003-03-22  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa.c (output_cbranch, output_bb, output_bvb): Output nop for
+	conditional branch to the following instruction.
+
+2003-03-21  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR doc-bug/9813
+	* doc/extend.texi: Move misplaced paragraph about underscores in
+	variables in macros.
+
+2003-03-21  Eric Botcazou  <ebotcazou@libertysurf.fr>
+            Richard Henderson  <rth@redhat.com>
+
+	PR optimization/8366
+	* config/sparc/sparc.h: (SYMBOLIC_CONST): New macro.
+	(GO_IF_LEGITIMATE_ADDRESS): Use it. Reject the form
+	PIC+SYMBOLIC_CONST in other modes than Pmode.
+	(GO_IF_MODE_DEPENDENT_ADDRESS): Use it. Mark
+	the form PIC+SYMBOLIC_CONST as mode dependent.
+
+2003-03-20  Richard Henderson  <rth@redhat.com>
+
+	* fold-const.c (extract_muldiv_1): Revert changing order of
+	operands in case MULT_EXPR of 2003-02-16 patch.
+
+2003-03-19  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/8746
+	Backport from mainline:
+
+	Thu Jun  6 23:14:46 CEST 2002  Jan Hubicka<jh@suse.cz>
+
+	* i386.md (and promoting splitters): Disable QI to SImode promoting
+	when doing so changes immediate to be 32bit.
+
+2003-03-19  Alan Modra  <amodra@bigpond.net.au>
+
+	PR target/10073
+	* combine.c (force_to_mode <NOT>): Use gen_int_mode.
+
+2003-03-17  Dave Love  <fx@gnu.org>
+	    Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/alpha/osf.h (CPP_PREDEFINES): Define __digital__,
+	__arch64__ to match Compaq cc.
+	
+2003-03-17  Andreas Schwab  <schwab@suse.de>
+
+	PR target/7248
+	* config/m68k/m68k.md (iordi3): Fix setting low half to -1.  From
+	martin@blom.org.
+
+2003-03-16  Richard Henderson  <rth@redhat.com>
+
+	* config/i386/i386.md (movstrictqi, movstrictqi_1): Check
+	optimize_size as well.
+
+2003-03-16  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
+
+        PR target/9164
+        * tree.c (get_narrower): For extensions with unchanged bit number,
+        return the unsignedness of the outer mode.
+
+2003-03-14  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/8396
+	* tree-inline.c (initialize_inlined_parameters): Make sure the value
+	of read-only constant arguments is passed with the right type.
+
+2003-03-14  Andreas Jaeger  <aj@suse.de>
+
+	* config/i386/linux64.h (CPP_SPEC): Define __LP64__ and _LP64 for 
+	64-bit.
+
 2003-03-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* expr.c (do_jump): Handle UNSAVE_EXPR specially.
