--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,25 @@
+2003-03-23  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gcc.c-torture/execute/20030224-2.c: New test.
+
+2003-03-19  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/i386-signbit-1.c: New test.
+
+2003-03-16  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
+
+        * gcc.c-torture/execute/20030316-1.c: New test case.
+
+2003-03-16  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/6440
+	* g++.dg/template/spec7.C: New test.
+	* g++.dg/template/spec8.C: Likewise.
+
+2003-03-14  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/compile/20030314-1.c: New test.
+
 2003-03-19  Alan Modra  <amodra@bigpond.net.au>
 
 	PR target/10073
