--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -8107,9 +8107,10 @@
   [(set (reg 17)
 	(compare
 	  (and:DI (match_operand:DI 0 "nonimmediate_operand" "%!*a,r,!*a,r,rm")
-		  (match_operand:DI 1 "x86_64_szext_nonmemory_operand" "Z,Z,e,e,re"))
+		  (match_operand:DI 1 "x86_64_szext_general_operand" "Z,Z,e,e,re"))
 	  (const_int 0)))]
-  "TARGET_64BIT && ix86_match_ccmode (insn, CCNOmode)"
+  "TARGET_64BIT && ix86_match_ccmode (insn, CCNOmode)
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
   "@
    test{l}\t{%k1, %k0|%k0, %k1} 
    test{l}\t{%k1, %k0|%k0, %k1} 
@@ -8125,9 +8126,10 @@
   [(set (reg 17)
 	(compare
 	  (and:SI (match_operand:SI 0 "nonimmediate_operand" "%!*a,r,rm")
-		  (match_operand:SI 1 "nonmemory_operand" "in,in,rin"))
+		  (match_operand:SI 1 "general_operand" "in,in,rin"))
 	  (const_int 0)))]
-  "ix86_match_ccmode (insn, CCNOmode)"
+  "ix86_match_ccmode (insn, CCNOmode)
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
   "test{l}\t{%1, %0|%0, %1}"
   [(set_attr "type" "test")
    (set_attr "modrm" "0,1,1")
@@ -8146,9 +8148,10 @@
 (define_insn "*testhi_1"
   [(set (reg 17)
         (compare (and:HI (match_operand:HI 0 "nonimmediate_operand" "%!*a,r,rm")
-			 (match_operand:HI 1 "nonmemory_operand" "n,n,rn"))
+			 (match_operand:HI 1 "general_operand" "n,n,rn"))
 		 (const_int 0)))]
-  "ix86_match_ccmode (insn, CCNOmode)"
+  "ix86_match_ccmode (insn, CCNOmode)
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
   "test{w}\t{%1, %0|%0, %1}"
   [(set_attr "type" "test")
    (set_attr "modrm" "0,1,1")
@@ -8166,9 +8169,10 @@
 (define_insn "*testqi_1"
   [(set (reg 17)
         (compare (and:QI (match_operand:QI 0 "nonimmediate_operand" "%!*a,q,qm,r")
-			 (match_operand:QI 1 "nonmemory_operand" "n,n,qn,n"))
+			 (match_operand:QI 1 "general_operand" "n,n,qn,n"))
 		 (const_int 0)))]
-  "ix86_match_ccmode (insn, CCNOmode)"
+  "ix86_match_ccmode (insn, CCNOmode)
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
 {
   if (which_alternative == 3)
     {
@@ -8223,9 +8227,10 @@
 	      (const_int 8)
 	      (const_int 8))
 	    (zero_extend:SI
-	      (match_operand:QI 1 "nonimmediate_operand" "Qm")))
+	      (match_operand:QI 1 "general_operand" "Qm")))
 	  (const_int 0)))]
-  "!TARGET_64BIT && ix86_match_ccmode (insn, CCNOmode)"
+  "!TARGET_64BIT && ix86_match_ccmode (insn, CCNOmode)
+   && (GET_CODE (operands[0]) != MEM || GET_CODE (operands[1]) != MEM)"
   "test{b}\t{%1, %h0|%h0, %1}"
   [(set_attr "type" "test")
    (set_attr "mode" "QI")])
