* i386.md: New splitters to canonicalize order of arguments for AND.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/hammer-3_3-branch@64875 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -5570,6 +5570,20 @@
 	   (const_string "alu")))
    (set_attr "mode" "DI")])
 
+;; We may end up with add pattern and operand swapped.  Avoid it
+;; being turned into lea.
+(define_split
+  [(set (match_operand:DI 0 "register_operand" "")
+	(plus:DI (match_operand:DI 1 "nonimmediate_operand" "")
+		 (match_dup 0)))
+   (clobber (reg:CC 17))]
+  ""
+  [(parallel [(set (match_dup 0)
+		   (plus:DI (match_dup 0)
+			    (match_dup 1)))
+	      (clobber (reg:CC 17))])]
+  "")
+
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
   [(set (match_operand:DI 0 "register_operand" "")
@@ -5836,6 +5850,20 @@
 	   (const_string "alu")))
    (set_attr "mode" "SI")])
 
+;; We may end up with add pattern and operand swapped.  Avoid it
+;; being turned into lea.
+(define_split
+  [(set (match_operand:SI 0 "register_operand" "")
+	(plus:SI (match_operand:SI 1 "nonimmediate_operand" "")
+		 (match_dup 0)))
+   (clobber (reg:CC 17))]
+  ""
+  [(parallel [(set (match_dup 0)
+		   (plus:SI (match_dup 0)
+			    (match_dup 1)))
+	      (clobber (reg:CC 17))])]
+  "")
+
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
   [(set (match_operand 0 "register_operand" "")
@@ -5915,6 +5943,20 @@
 	   ]
 	   (const_string "alu")))
    (set_attr "mode" "SI")])
+
+;; We may end up with add pattern and operand swapped.  Avoid it
+;; being turned into lea.
+(define_split
+  [(set (match_operand:SI 0 "register_operand" "")
+	(plus:SI (match_operand:SI 1 "nonimmediate_operand" "")
+		 (match_dup 0)))
+   (clobber (reg:CC 17))]
+  ""
+  [(parallel [(set (match_dup 0)
+		   (plus:SI (match_dup 0)
+			    (match_dup 1)))
+	      (clobber (reg:CC 17))])]
+  "")
 
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
@@ -6258,6 +6300,20 @@
 	   (const_string "alu"))))
    (set_attr "mode" "HI,HI,SI")])
 
+;; We may end up with add pattern and operand swapped.  Avoid it
+;; being turned into lea.
+(define_split
+  [(set (match_operand:HI 0 "register_operand" "")
+	(plus:HI (match_operand:HI 1 "nonimmediate_operand" "")
+		 (match_dup 0)))
+   (clobber (reg:CC 17))]
+  ""
+  [(parallel [(set (match_dup 0)
+		   (plus:HI (match_dup 0)
+			    (match_dup 1)))
+	      (clobber (reg:CC 17))])]
+  "")
+
 (define_insn "*addhi_1"
   [(set (match_operand:HI 0 "nonimmediate_operand" "=rm,r")
 	(plus:HI (match_operand:HI 1 "nonimmediate_operand" "%0,0")
@@ -6506,6 +6562,20 @@
 	   (const_string "incdec")
 	   (const_string "alu"))))
    (set_attr "mode" "QI,QI,SI,SI")])
+
+;; We may end up with add pattern and operand swapped.  Avoid it
+;; being turned into lea.
+(define_split
+  [(set (match_operand:QI 0 "register_operand" "")
+	(plus:QI (match_operand:QI 1 "nonimmediate_operand" "")
+		 (match_dup 0)))
+   (clobber (reg:CC 17))]
+  ""
+  [(parallel [(set (match_dup 0)
+		   (plus:QI (match_dup 0)
+			    (match_dup 1)))
+	      (clobber (reg:CC 17))])]
+  "")
 
 (define_insn "*addqi_1"
   [(set (match_operand:QI 0 "nonimmediate_operand" "=qm,q,r")
