* config/ia64/ia64.c (ia64_expand_op_and_fetch): Fix comment. 	(ia64_expand_compare_and_swap): Use always DImode ar.ccv, 	zero extend old to it. 	* config/ia64/ia64.md (cmpxchg_acq_si): Remove mode from ccv 	operand.
	* gcc.dg/ia64-sync-3.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@64894 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -8498,7 +8498,7 @@
    (set (match_operand:SI 1 "not_postinc_memory_operand" "+S")
         (unspec:SI [(match_dup 1)
                     (match_operand:SI 2 "gr_register_operand" "r")
-		    (match_operand:SI 3 "ar_ccv_reg_operand" "")] 13))]
+		    (match_operand 3 "ar_ccv_reg_operand" "")] 13))]
   ""
   "cmpxchg4.acq %0 = %1, %2, %3"
   [(set_attr "itanium_class" "sem")])
