--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-26  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/ia64-sync-3.c: New test.
+
 2003-03-23  Daniel Jacobowitz  <drow@mvista.com>
 
 	* gcc.c-torture/execute/20030224-2.c: New test.
