--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-01-31  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* gcc.dg/20030129-1.c: New test.
+
 2003-03-26  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/ia64-sync-3.c: New test.
